# Commitlabs-Contracts

./: .gitignore  ASSET_INTEGRATION_IMPLEMENTATION.md  CLAUDE.md  COMPLETE_OPTIMIZATION_DOCUMENTATION.md  Cargo.toml  DEPLOYMENT.md  PERFORMANCE.md  README.md  TESTING.md  lcov.info
.github/workflows/: soroban-contracts-ci.yml
benchmarks/: README.md
bindings/: package-lock.json
bindings/src/: index.ts
config/: deploy.env.example
contracts/allocation_logic/: Cargo.toml
contracts/attestation_engine/: Cargo.toml
contracts/commitment_core/: Cargo.toml
contracts/commitment_interface/: Cargo.toml  README.md
contracts/commitment_interface/src/: lib.rs  types.rs
contracts/commitment_marketplace/: Cargo.toml  README.md
contracts/commitment_nft/: Cargo.toml
contracts/price_oracle/: Cargo.toml
contracts/shared_utils/: Cargo.toml  README.md
contracts/time_lock/: Cargo.toml
deployments/: mainnet.json  testnet.json
docs/: ARCHITECTURE.md  CONTRACT_FUNCTIONS.md  FEES.md  KNOWN_LIMITATIONS.md  SECURITY_AUDIT_PREP.md  SECURITY_CHECKLIST.md  TEST_COVERAGE.md  THREAT_MODEL.md  UPGRADES.md  UPGRADE_PATHS.md  crates.js  help.html  search-index.js  settings.html  src-files.js
docs/allocation_logic/: all.html  enum.DataKey.html  enum.Error.html  enum.RiskLevel.html  enum.Strategy.html  index.html  sidebar-items.js  static.__SPEC_XDR_TYPE_ALLOCATION.html  static.__SPEC_XDR_TYPE_ERROR.html  (+10 more)
monitoring/: config.yaml
scripts/: benchmark.sh  build-contracts.sh  deploy-mainnet.sh  deploy-testnet.sh  deploy.sh  generate-docs.sh
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/test_snapshots/: test_commitment_value_update_with_health_tracking.1.json  test_compliance_verification_flow.1.json  test_create_commitment_with_attestation_flow.1.json  test_early_exit_flow_end_to_end.1.json  test_gas_batch_attestations.1.json  test_gas_multiple_operations.1.json  test_gas_single_commitment_creation.1.json  test_settlement_flow_end_to_end.1.json
(+233 files in other folders)
